[package]
name = "tunnel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "linux")'.dependencies]
config = "0.14.0"
dirs = "5.0.1"
serde = "1.0.188"
serde_yaml = "0.9.31"
serde_json = "1.0.113"
x25519-dalek = { version = "2", features = ["getrandom", "static_secrets"] }
zeroize = "1.7.0"
base64 = "0.21.7"
thiserror = "1.0.56"
cidr = { version = "0.2.2", features = ["serde"] }
genetlink = "0.2.5"
rtnetlink = "0.14.0"
netlink-packet-core = "0.7.0"
netlink-packet-utils = "0.5.2"
netlink-packet-generic = "0.3.3"
netlink-packet-route = "0.19.0"
netlink-packet-wireguard = "0.2.3"
futures = "0.3.30"
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7.10"
hickory-server = { version = "0.24", features = ["hickory-resolver"] }
hickory-resolver = { version = "0.24", features = ["webpki-roots", "dns-over-rustls"] }
async-trait = "0.1.77"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

[lints.clippy]
pedantic = "warn"
