[package]
name = "tunnel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "linux")'.dependencies]
config = "0.15.21"
dirs = "6.0.0"
serde = "1.0.228"
serde_yaml = "0.9.34"
serde_json = "1.0.149"
x25519-dalek = { version = "2", features = ["getrandom", "static_secrets"] }
zeroize = "1.8.2"
base64 = "0.22.1"
thiserror = "2.0.18"
cidr = { version = "0.3.2", features = ["serde"] }
genetlink = "0.2.6"
rtnetlink = "0.20.0"
netlink-packet-core = "0.8.1"
netlink-packet-utils = "0.6.0"
netlink-packet-generic = "0.4.0"
netlink-packet-route = "0.29.0"
netlink-packet-wireguard = "0.3.0"
futures = "0.3.32"
tokio = { version = "1.50", features = ["full"] }
tokio-util = "0.7.18"
hickory-server = { version = "0.25", features = ["resolver"] }
hickory-resolver = { version = "0.25", features = ["webpki-roots", "tls-ring"] }
async-trait = "0.1.89"
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
reqwest = { version = "0.13", default-features = false, features = ["json"] }

[lints.clippy]
pedantic = "warn"
